--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,6 +69,8 @@
         "typeinfo": "cpp",
         "valarray": "cpp",
         "variant": "cpp",
-        "__nullptr": "cpp"
+        "__nullptr": "cpp",
+        "numbers": "cpp",
+        "semaphore": "cpp"
     }
 }
